version 0.72.01
	rpm creation
	Reading color space (K-x only)
	Writing color space

version 0.72.00 ( 2011-05-09 )
	Support for K200D added by Jens Dreyer <jens.dreyer@udo.edu>
	Better formatting of status info in command line interface
	New command line argument: --exposure_compensation

version 0.71.02 ( 2011-04-09 )
	Reading jpeg hue (K-x only)
	Writing jpeg hue
	Handling different jpeg property level numbers
	Reading manual mode ev (K-x only)
	Writing flash mode
	Handling camera specific shutter speeds
	Command line jpeg save bugfix (was not working without specifying quality)
	Glade bugfixes

version 0.71.00 ( 2011-01-24 )
	Better handling of jpeg quality
	Added hex info to commandline interface (--status_hex)
	Reading auto iso range (K-x only)
	Setting auto iso range (commandline only)
	Added new jpeg images modes
	Reading drive mode (K-x only)
	Reading bracket ev (K-x only)
	Reading shake reduction (K-x only)
	Reading af mode (K-x only)
	Autofocus mode bugfix
	Reading white balance fields (K-x only)
	Writing white balance fields
	Reading flash fields (K-x only)
	Writing flash exposure compensation field
	Writing drive mode
	Writing af mode

version 0.70.01 ( 2011-01-19 )
	File format support for commandline interface (--file_format)
	GUI bugfix
	Deleted useless current_zoom field
	More commandline status info

version 0.70.00 ( 2011-01-17)
	Initial release

